--- a/app/src/main/res/layout/card_record.xml
+++ b/app/src/main/res/layout/card_record.xml
@@ -11,18 +11,16 @@
             type="work.beltran.discogsbrowser.api.model.record.Record" />
     </data>
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        card_view:cardCornerRadius="4dp"
-        card_view:contentPadding="0dp">
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--android:layout_marginBottom="1dp"-->
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:id="@+id/layourEntry"
+            android:background="@color/primary_light">
 
             <TextView
                 android:id="@+id/record_title"
@@ -102,5 +100,4 @@
                 android:textColor="@color/colorAccent"
                 android:layout_alignParentRight="true" />
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
 </layout>
